<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/coin"
        android:layout_width="246dp"
        android:layout_height="129dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/CompoundInterestCalculator"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/button_background"
        android:text="@string/calculate"
        android:textColor="@color/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howManyYears" />


    <!--    <EditText-->
    <!--        android:id="@+id/nTimesCompounded"-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:ems="10"-->
    <!--        android:fontFamily="monospace"-->
    <!--        android:hint="@string/times_compounded"-->
    <!--        android:importantForAutofill="no"-->
    <!--        android:inputType="number"-->


    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/interestRate" />-->


    <!--    <EditText-->
    <!--        android:id="@+id/howManyYears"-->

    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:ems="10"-->
    <!--        android:fontFamily="monospace"-->
    <!--        android:hint="@string/how_many_years"-->
    <!--        android:importantForAutofill="no"-->
    <!--        android:inputType="number"-->

    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/nTimesCompounded" />-->


    <EditText
        android:id="@+id/originalAmount"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/original_amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/interest_rate"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originalAmount" />

    <Spinner
        android:id="@+id/nTimesCompounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="60dp"
        android:entries="@array/times_compounded_array"
        android:prompt="@string/times_compounded_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRate" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/compound_frequency"
        android:textAlignment="textStart"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRate" />

    <SeekBar
        android:id="@+id/howManyYears"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="yes"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTimesCompounded" />

    <TextView
        android:id="@+id/seekBarDescr"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/length_of_time_in_years"
        android:textAlignment="textStart"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTimesCompounded" />

    <TextView
        android:id="@+id/selectedYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howManyYears" />

    <TextView
        android:id="@+id/result"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="40sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculateButton" />

    <TextView
        android:id="@+id/finalAmount"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:fontFamily="monospace"
        android:text="@string/your_final_amount_is"
        android:textAlignment="textStart"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="568dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
